--- a/MRtrix3_MSMT-CSD.ipynb
+++ b/MRtrix3_MSMT-CSD.ipynb
@@ -36,25 +36,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#--------------------------------------------------\n",
     "# Pre-processed DWI data and brain mask \n",
     "#--------------------------------------------------\n",
-    "data_path=/home/rdadarwal/rdadarwal/PRIME_DE_data/dpz/\n",
-    "dwi_file=eddy_corrected.nii.gz\n",
-    "brainmask_file=brain_mask.nii.gz\n",
-    "bval=dMRI.bvals\n",
-    "bvec=eddy_corrected.eddy_rotated_bvecs"
+    "#data_path=/home/rdadarwal/rdadarwal/PRIME_DE_data/dpz/\n",
+    "#dwi_file=eddy_corrected.nii.gz\n",
+    "#brainmask_file=brain_mask.nii.gz\n",
+    "#bval=dMRI.bvals\n",
+    "#bvec=eddy_corrected.eddy_rotated_bvecs\n",
+    "data_path = \"/home/erjun/githubEZ/dHCP/sub-CC00060XX03/ses-12501/dwi\"\n",
+    "dwi_file = 'sub-CC00060XX03_ses-12501_desc-preproc_dwi.nii.gz'\n",
+    "brainmask_file = 'sub-CC00060XX03_ses-12501_desc-preproc_space-dwi_brainmask.nii.gz'\n",
+    "bval = 'sub-CC00060XX03_ses-12501_desc-preproc_dwi.bval'\n",
+    "bvec = 'sub-CC00060XX03_ses-12501_desc-preproc_dwi.bvec'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-4355b5bfd7d4>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-4355b5bfd7d4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    mkdir ~data_path/MS3T-CSD\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Create directory\n",
     "mkdir ${data_path}/MS3T-CSD\n",
@@ -158,15 +172,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
